--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,105 +1,382 @@
 @import "reset.css";
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 11px;
-  color: #000;
-  line-height: 15px;
-  background-color: #ddd;
+	text-align: center;
+	background: #fff;
+	color: #333;
+	font: normal 12px Helvetica, Arial, Verdana, sans-serif;
 }
 
-h2, h3 {
-  margin-bottom: 3px;
-}
+img { border: 0; }
 
-p,
-ul {
-  margin-bottom: 10px;
+div#post {
+	display: block;
+	position: relative;
+	text-align: center;
+	padding: 0.6em;
+	background: #333;
+	min-height: 19px;
 }
-
-a {
-  color: #888;
-  text-decoration: none;
-  background-color: #f0f0f0;
+div#post_inner {
+	position: relative;
+	width: 900px;
+	margin: 0 auto;
+	text-align: left;
 }
-
-a:hover {
-  color: #fff;
-  background-color: #888;
-}
-
-br.clear {
-  clear: both;
-}
-
-.hide {
-  display: none;
-}
-
-div#repository {
-  padding: 10px;
+div#menu {
+	font: normal 11px Helvetica, Arial, Verdana, sans-serif;
+	position: absolute;
+	top: 2px;
+	right: 0;
+	text-align: right;
 }
 
 div#container {
-  padding: 0 20px 10px 20px;
-  background-color: #f5f5f5;
+	display: block;
+	width: 900px;
+	margin: 0 auto;
 }
 
-div#header {
-  height: 47px;
-  padding: 10px 0;
-  background-color: #f5f5f5;
-  background-image: url('/images/logo.gif');
-  background-position: left center;
-  background-repeat: no-repeat;
+div#flag {
+	display: block;
+	position: relative;
+	text-align: left;
+	height: 78px;
+}
+div#flag img {
+	float: right;
+	margin-top: 21px;
+}
+#flag h1 {
+	font: bold 130% Helvetica, Arial, sans-serif;
+}
+div#subnav {
+	text-align: center;
+	border-top: 1px solid #999;
+	padding: 10px 0;
 }
 
-img#login_badge {
-  position: absolute;
-  top: 62px;
-  right: 30px;
+div.post_box {
+	display: block;
+	margin: 25px 0;
+	padding: 15px;
+	border-top: 4px solid #ccc;
+	background: #ebebeb;
+	text-align: center;
+}
+	#left_side .post_box {
+		text-align: left;
+		margin-top: 0;
+	}
+
+div#wrapper_main {
+	width: 900px;
+	margin-bottom: 30px;
 }
 
-div#content {
-  float: left;
-  width: 700px;
-  padding-bottom: 57px;
+div#right_side, div#left_side {
+	display: block;
+	float: left;
+	text-align: left;
+	width: 190px;
 }
 
-div#content span#flash {
-  background-color: #fffff3;
+	div#right_side {
+		width: 710px;
+	}
+	
+	div#left_side {
+		clear: right;
+	}
+
+div#right_side h2, div#tabs, div.cell {
+	padding-left: 20px;
 }
 
-div#content ul li {
-  padding: 5px 0;
+div#friends a img {
+	border: none;
+	background: #fff;
+	padding: 3px;
+	margin: 2px;
 }
 
-div#content ul li span.code {
-  color: #aaa;
+table, tr {
+	width: 100%;
+	border: 0;
+	border-collapse: collapse;
 }
 
-div#content ul li:hover span.code {
-  color: #888;
-  background-color: #eee;
+table {
+	margin: 0 0 20px 0;
 }
 
-div#content ul li span.tag {
-  padding: 0 2px;
-  color: #888000;
-  background-color: #ff0;
+td {
+	width: 50%;
+	text-align: left;
 }
 
-div#sidebar {
-  float: left;
-  width: 210px;
-  margin-right: 20px;
-  background-color: #f5f5f5;
+
+hr {
+	border: 0;
+	line-height: 0;
+	height: 1px;
+	background: #999;
+	padding: 0;
+	margin-top: 0px !important; margin-top: -7px;
 }
 
-div#sidebar p#copyright,
-div#sidebar p#copyright a {
-  font-size: 11px;
-  color: #ccc;
-  line-height: 11px;
-  background-color: #f5f5f5;
+.clear {
+	border: 0px;
+	height: 0px;
+	clear: both;
+	width: 0px;
 }
+
+small, h5 {
+	font: normal 11px Helvetica, Arial, Verdana, sans-serif;
+	color: #999;
+}
+
+h5 {
+	margin-bottom: 5px;
+}
+
+a {
+	text-decoration: underline;
+	color: #06c;
+}
+a:visited {
+	
+}
+a:hover {
+	text-decoration: none;
+	color: #333;
+}
+
+	#menu a, #menu a:visited {
+		color: #999;
+		text-decoration: underline;
+		padding-left: 5px;
+	}
+	#menu a:hover {
+		color: #ddd;
+		text-decoration: none;
+	}
+
+	a.red, a.red:visited {
+		color: #c00;
+		font: bold 100% Helvetica, Arial, sans-serif;
+		background: #ff9;
+		padding: 2px 4px;
+		margin: 0;
+	}
+
+	a.toggle, a.toggle:visited {
+		float: right;
+		color: #333;
+		padding: 2px 4px;
+		margin: 0 0 0 10px;
+		background: #ff9;
+		text-decoration: none;
+	}
+	a.toggle:hover {
+		color: #fff;
+		background: #333; 
+	}
+
+	a.options, a.options:visited, a.options_on, a.options_on:visited {
+		color: #999;
+		margin: 0 5px 0 0;
+		padding: 6px;
+		text-decoration: none;
+		background: #ebebeb;
+	}
+	a.options:hover, a.options_on, a.options_on:visited {
+		color: #333;
+		background: #d6d6d6;
+		-webkit-border-top-left-radius: 2px;
+		-webkit-border-top-right-radius: 2px;
+		-moz-border-radius-topright: 2px;
+		-moz-border-radius-topleft: 2px;
+		text-decoration: none;
+	}
+
+	a.options_on, a.options_on:visited, a.options_on:hover {
+		cursor: default;
+		font-weight: bold;
+	}
+	
+div.desc {
+	margin: 6px 0 0 0;
+	line-height: 140%;
+}
+div.desc a {
+	color: #69c;
+}
+div.desc .text {
+	color: #333;
+}
+		
+div#tabs {
+	font-size: 12px;
+	margin: 4px 0;
+	line-height: 150%;
+}
+
+.post_box p {
+	margin: 0 0 10px 0;
+	line-height: 150%;
+	color: #333;
+	font-family: Georgia, Garamond, Times, serif;
+}
+
+h1{
+	font: normal 25px Georgia, Garamond, Times, serif;
+	color: #333;
+	padding-top: 28px;
+}
+	h1#logo {
+		position: absolute;
+		top: 30px;
+		left: 0px;
+		display: block;
+		width: 126px;
+		height: 28px;
+		background: url("/images/interface/logo_urld.gif") no-repeat;
+		text-indent: -7777px;
+	}
+	h1#logo a, h1#logo a:visited {
+		position: absolute;
+		top: 0;
+		left: 0;
+		display: block;
+		width: 126px;
+		height: 28px;
+	}
+	
+h2 {
+	font: bold 11px Helvetica, Arial, Verdana, sans-serif;
+	color: #333;
+	/* text-decoration: underline; */
+	padding: 10px 0;
+	border-top: 4px #333 solid;
+}
+
+h3 {
+	display: inline;
+	font-size: 11px;
+	margin: 0 15px 0 0;
+}
+
+	h3 a, h3 a:visited {
+		color: #333;
+		padding: 4px 7px;
+		background: #fff;
+		text-decoration: none;
+		-webkit-border-radius: 4px; 
+		-moz-border-radius: 4px;
+	}
+	h3 a:hover {
+		color: #06c;
+		background: #fff;
+	}
+
+h4 {
+	font-size: 11px;
+	font-weight: normal;
+	color: #999;
+	padding: 7px 0 10px 0;
+	border-top: 4px #d6d6d6 solid;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0 0 30px 0;
+}
+
+li {
+	list-style-type: none;
+	color: #666;
+	font: normal 12px Helvetica, Arial, Verdana, sans-serif;
+	padding: .5em 0;
+}
+	li a {
+		color: #06c;
+		text-decoration: underline;
+	}
+	li a:visited {
+		color: #69c;
+		text-decoration: underline;
+	}
+	li a:hover {
+		text-decoration: none;
+		color: #333;
+	}
+
+	li a strong, li a:visited strong {
+		font-family: Helvetica, Arial, Verdana, sans-serif;
+		margin-right: 3px;
+	}
+	li a.expand, li a.expand:visited {
+		float: right;
+		-webkit-border-radius: 4px; 
+		-moz-border-radius: 4px;
+		font-family: Helvetica, Arial, Verdana, sans-serif;
+		font-weight: bold;
+		color: #333;
+		padding: 0 4px 1px 4px;
+		margin-top: -2px;
+		background: #ff9;
+		text-decoration: none;
+	}
+	li a.expand:hover {
+		color: #fff;
+		background: #333;
+	}
+.altrow {
+	background-color: #f5f7fB;
+}
+
+.post_box input, .post_box select {
+	margin: 2px 0 5px 0;
+}
+
+input.cats_dogs, select#beds {
+	margin-left: 10px;
+}
+
+input.min_max {
+	width: 50px;
+}
+
+input:focus {
+	/* background: #fff; */
+}
+
+#left_side .post_box select {
+	display: block;
+	width: 100%;
+	margin: 0 0 5px 0;
+}
+form {
+	color: #333;
+	font: normal 11px Helvetica, Arial, Verdana, sans-serif;
+}
+
+#tooltip_div {
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 1000;
+	display: none;
+	padding: 15px;
+	border: 5px solid #fff;
+	background: #eee;
+	color: #333;
+	font-size: 11px;
+	line-height: 16px;
+	width: 300px;
+}
+	#tooltip_div img {
+		margin-bottom: 5px;
+	}
