Forgot to change the index page to the new layout's code

--- a/app/views/numenor/index.rhtml
+++ b/app/views/numenor/index.rhtml
@@ -1,43 +1,38 @@
-<h2>Recently added links</h2>
+<h2>URLS</h2>
 
-<ul>
-  <li><%= link_to "Roomorama - The quick and easy way to arrange short term stays" %> <span class="code">(room378)</span></li>
-  <li>
-    <div style="margin-bottom: 3px;"><span class="tag">VIDEO</span> <%= link_to "YouTube - Tiger Woods 09 - Walk on Water" %> <span class="code">(tiger01)</span></div>
-    <div style="margin-bottom: 3px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-    <div style="margin-bottom: 3px;"><span style="color: #aaa"><strong>Design</strong> &mdash; Added by timerickson</span></div>
-  </li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "Roomorama - The quick and easy way to arrange short term stays" %> <span class="code">(room378)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><span class="tag">IMG</span> <%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "Roomorama - The quick and easy way to arrange short term stays" %> <span class="code">(room378)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><span class="tag">IMG</span> <%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><span class="tag">VIDEO</span> <%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "Roomorama - The quick and easy way to arrange short term stays" %> <span class="code">(room378)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><span class="tag">IMG</span> <%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-  <li><%= link_to "When Things Go Wrong - Mythbusters" %> <span class="code">(d40myth)</span></li>
-  <li><%= link_to "How to build a better rocket - WikiHow" %> <span class="code">(a45rock)</span></li>
-</ul>
+<div id="tabs">
+	<a href="" class="options_on">Public Url Feed</a>
+</div>
+
+<div class="cell">
+	<h4><a href="#" class="toggle">Toggle Url Description <strong>+</strong></a>Page 1</h4>
+
+	<ul>
+		<li><a href="#" class="expand">+</a><small><strong>VID</strong></small> <a href="/tiger01">YouTube - Tiger Woods 09 - Walk on Water</a> (tiger01)</li>
+		<li><a href="#" class="expand">+</a> <a href="/room378">Roomorama - The quick and easy way to arrange short term stays</a> (room378)</li>
+		<li><a href="#" class="expand">+</a> <a href="/d40myth">When Things Go Wrong - Mythbusters</a> (d40myth)</li>
+		<li><a href="#" class="expand">+</a> <a href="/a45rock">How to build a better rocket - WikiHow</a> (a45rock)</li>
+		<li><a href="#" class="expand">+</a> <a href="/1combin">What do you get when you combine, Digg, Delicious, and Elfurl?</a> (1combin)</li>
+		<li><a href="#" class="expand">+</a> <a href="/20logo">Toxel.com » 20 Famous Logo Designs</a> (20logo)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">How to survive in the wilderness for two years - WikiHow</a> (wildwood)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">Four Score and Seven Years ago I Built a Trebuchet That Contained Lethal Weapons Of Mass Hoover Dam Control ...</a> (longttle)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">News, Weather and Sports for Sioux Falls, South Dakota, Minnesota and Iowa</a> (we09th)</li>
+		<li><a href="#" class="expand">+</a> <a href="#"><strong>&amp;</strong> How to build a better WMD - Whitehouse.gov</a> (bombrus)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">YouTube - The Evolution of Dance</a> (tubez239)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">Top Ten CSS Scripts	on Listmania</a> (list888)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">Amazon Web Services Developer Connection : Running MySQL on Amazon EC2 with Elastic Block Store</a> (ama03e)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">Firefox Extensions: Mozilla Crowns Best Firefox 3 Extensions</a> (fir489e)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">11 Things Startups Should Know About Enterprise 2.0 - ReadWriteWeb</a> (rww1120)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">Create Free iPhone Ringtones Using iTunes in Windows</a> (tunf19e)</li>
+		<li><a href="#" class="expand">+</a> <small><strong>IMG</strong></small> <a href="#">2781717573_1449ce775c_o.jpg (JPEG Image, 413x528 pixels)</a> (cecojpg)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">Photosynth : Microsoft Live Labs</a> (msphotol)</li>
+		<li><a href="#" class="expand">+</a> <small><strong>NEW</strong></small> <a href="#">Obama: I've decided on my running mate - CNN.com</a> (obamcnn)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">Oh, Come On Already!  - The Caucus Blog - NYTimes.com</a> (obamnyt)</li>
+		<li><a href="#" class="expand">+</a> <a href="#">VictoriasSecret.com: The Official Site of Victoria's Secret</a> (3secret)</li>
+	</ul>
+
+	<h4>
+		<h3><a href="#">Page 2 &rarr;</a> <a href="">3</a> <a href="">4</a> <a href="">5</a> <a href="">6</a> <a href="">7</a> <a href="">8</a> ... <a href="">&infin;</a></h3>
+	</h4>
+	
+</div>
