--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -10,21 +10,57 @@
   <body>
     
     <div id="post">
-  		<div id="post_inner">			
+  		<div id="post_inner">
+  		  <%- if session[:logged_in] == true -%>
+  		  <h3><%= link_to "post a url", :controller => 'links', :action => 'new' %></h3>
+  			<small>quick submit</small>
+  			<%- form_tag :controller => 'links', :action => 'add' do -%>
+    			<%= text_field "link", "uri", :value => "http://" %>
+    			<select name="category">
+    				<option value="">Unsorted</option>
+    				<option value="">News</option>
+    				<option value="">Politics</option>
+    				<option value="">Technology</option>
+    				<option value="">Design</option>
+    				<option value="">Science</option>
+    				<option value="">Gaming</option>
+    				<option value="">Lifestyle</option>
+    				<option value="">Entertainment</option>
+    				<option value="">Sports</option>
+    				<option value="">Offbeat</option>
+    			</select>
+          <%= submit_tag "Go" %>
+    			<%= hidden_field "link", "quick", :value => true %>
+  			<%- end -%>
+
+  			<div id="menu">
+  				<p><a href="#">My Account</a> <a href="#">Settings</a> <%= link_to "Logout", :controller => 'members', :action => 'logout' %></p>
+  			</div>
+  		  <%- else -%>
   			<div id="menu">
   				<p><%= link_to "About", :controller => 'numenor', :action => 'about' %> <%= link_to "Create An Account", :controller => 'members', :action => 'register' %></p>
   			</div>
+  			<%- end -%>
   		</div>
   	</div>
   	
   	<div id="container">
   		<div id="flag">
   			<h1 id="logo"><%= link_to("THE URLD", {:controller => 'numenor'}, :title => '&lt;&lt; Go home') %></h1>
-  			<%= image_tag "interface/newaroundhere.gif", :size => '230x35', :alt => "New around here? Create an account!" %>
+  			<%= image_tag "interface/newaroundhere.gif", :size => '230x35', :alt => "New around here? Create an account!" unless session[:logged_in] == true %>
   		</div>
 
   		<div id="wrapper_main">
   			<div id="left_side">
+  			  <%- if session[:logged_in] == true -%>
+  			  <h2>HI, <%= @master_member.username.upcase %></h2>
+  				<div class="post_box">
+  					<small>You &amp; Your Friends</small>
+  					<div id="friends">
+  						<a href=""><img src="/images/avatars/me.gif" /></a><a href=""><img src="/images/avatars/1.gif" /></a><a href=""><img src="/images/avatars/2.gif" /></a><a href=""><img src="/images/avatars/3.gif" /></a><a href=""><img src="/images/avatars/4.gif" /></a><a href=""><img src="/images/avatars/5.gif" /></a><a href=""><img src="/images/avatars/6.gif" /></a><a href=""><img src="/images/avatars/7.gif" /></a><a href=""><img src="/images/avatars/8.gif" /></a><a href=""><img src="/images/avatars/9.gif" /></a><a href=""><img src="/images/avatars/10.gif" /></a><a href=""><img src="/images/avatars/11.gif" /></a><a href=""><img src="/images/avatars/12.gif" /></a><a href=""><img src="/images/avatars/13.gif" /></a><a href=""><img src="/images/avatars/14.gif" /></a><a href=""><img src="/images/avatars/15.gif" /></a><a href=""><img src="/images/avatars/16.gif" /></a><a href=""><img src="/images/avatars/17.gif" /></a><a href=""><img src="/images/avatars/18.gif" /></a><a href=""><img src="/images/avatars/19.gif" /></a><a href=""><img src="/images/avatars/20.gif" /></a><a href=""><img src="/images/avatars/21.gif" /></a><a href=""><img src="/images/avatars/22.gif" /></a><a href=""><img src="/images/avatars/23.gif" /></a><a href=""><img src="/images/avatars/24.gif" /></a><a href=""><img src="/images/avatars/25.gif" /></a><a href=""><img src="/images/avatars/26.gif" /></a><a href=""><img src="/images/avatars/27.gif" /></a><a href=""><img src="/images/avatars/28.gif" /></a><a href=""><img src="/images/avatars/29.gif" /></a><a href=""><img src="/images/avatars/30.gif" /></a><a href=""><img src="/images/avatars/31.gif" /></a><a href=""><img src="/images/avatars/32.gif" /></a><a href=""><img src="/images/avatars/33.gif" /></a><a href=""><img src="/images/avatars/34.gif" /></a><a href=""><img src="/images/avatars/35.gif" /></a><a href=""><img src="/images/avatars/36.gif" /></a><a href=""><img src="/images/avatars/37.gif" /></a><a href=""><img src="/images/avatars/38.gif" /></a><a href=""><img src="/images/avatars/39.gif" /></a><a href=""><img src="/images/avatars/40.gif" /></a>
+  					</div>
+  				</div>
+  			  <%- else -%>
   				<h2>LOGIN</h2>
   				<div class="post_box">
   					<%- form_tag :controller => 'members', :action => 'login' do -%>
@@ -37,6 +73,7 @@
   					  <%= check_box_tag "remember_me", :checked => 'checked' %>&nbsp;
   					<%- end -%>
   				</div>
+  				<%- end -%>
 
   				<h2>CATEGORIES</h2>
   				<h4>General Categories</h4>
