--- a/app/views/numenor/_link.rhtml
+++ b/app/views/numenor/_link.rhtml
@@ -1,1 +1,7 @@
-<li class="<%= cycle("row1", "row2") %>"><a class="expand">+</a><small><strong>VID</strong></small> <%= link_to "#{truncate(link.domain.title, 25)} - #{truncate(link.title, 60)}", :controller => 'links', :action => 'view', :code => link.code %> (<%= link.code %>)</li>
+<li class="<%= cycle("row1", "row2") %>">
+  <a class="expand" id="toggle_<%= link.id %>" onclick="Element.toggle('info_<%= link.id %>');">+</a>
+  <%= link_to "#{truncate(link.domain.title, 25)} - #{truncate(link.title, 60)}", :controller => 'links', :action => 'view', :code => link.code %> (<%= link.code %>)
+  <div id="info_<%= link.id %>" style="display: none;">
+    <small><strong>Originally added <%= datetime(link.created_on) %></strong> by <%= link_to link.member.username, :controller => 'members', :action => 'view', :id => link.member.id %></small><br/>
+  </div>
+</li>
