--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -58,6 +58,11 @@ div#subnav {
 	border-top: 1px solid #999;
 	padding: 10px 0;
 }
+div#flash {
+	text-align: center;
+	border-top: 1px solid #999;
+	padding: 10px 0;
+}
 
 div.post_box {
 	display: block;
