--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -1,97 +1,140 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>The Urld</title>
-    <%= stylesheet_link_tag 'default' %>
-    <%= javascript_include_tag :defaults %>
-  </head>
-  <body>
-    
-    <div id="post">
-  		<div id="post_inner">
-  		  <%- if session[:logged_in] == true -%>
-  		  <h3><%= link_to "post a url", :controller => 'links', :action => 'new' %></h3>
-  			<small>quick submit</small>
-  			<% form_tag :controller => 'links', :action => 'new' do %>
-    			<%= text_field "link", "uri", :value => "http://" %>
-    			<%= collection_select 'link', 'category_id', @categories, 'id', 'name' %>
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+  <title>The Urld</title>
+  <%= stylesheet_link_tag 'default' %>
+  <%= javascript_include_tag :defaults %>
+</head>
+<body>
+  
+  <div id="jump_to_content" class="hide">
+    <a href="#content"><strong>Jump to content</strong></a>
+  </div>
+  
+  <div id="quick_bar_container">
+    <div id="quick_bar">
+      <%- if session[:logged_in] == true -%>
+      <p class="post_url"><a href="#">Post a URL</a></p>
+      <% form_tag :controller => 'links', :action => 'new' do %>
+        <p>
+          <%= label_tag "link", "uri", :name => "Quick submit" %>
+          <%= text_field "link", "uri", :value => "http://", :style => "color: #aaa;", :onclick => "this.value = ''; this.style.color = '#000';" %>
+          <%= collection_select 'link', 'category_id', @categories, 'id', 'name' %>
           <%= submit_tag "Go" %>
-    			<%= hidden_field "link", "quick", :value => true %>
-  			<% end %>
+          <%= hidden_field "link", "quick", :value => true %>
+        </p>
+      <% end %>
+      <ul id="quick_navigation">
+        <li><a href="#">My Account</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><%= link_to "Logout", :controller => 'members', :action => 'logout' %></li>
+      </ul>
+      <%- else -%>
+      <ul id="quick_navigation">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Create An Account</a></li>
+        <li><%= link_to "Login", :controller => 'members', :action => 'login' %></li>
+      </ul>
+      <%- end -%>
+    </div>
+  </div>
+  
+  <div id="container">
+    <h1><a href="#"><span class="hide">The Urld</span></a></h1>
+    <!-- <%= image_tag "interface/newaroundhere.gif", :size => '230x35', :alt => "New around here? Create an account!" unless session[:logged_in] == true %> -->
+    <div id="substance">
+      
+      <div id="sidebar">
+        <%- if session[:logged_in] == true -%>
+        <h3>Hi, Angelo</h3>
+        <div id="friends" class="box">
+          <h5>You &amp; Your Friends</h5>
+          <p class="icons">
+            <a href="#"><img src="/images/avatars/me.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/1.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/2.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/3.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/4.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/5.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/6.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/7.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/8.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/9.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/10.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/11.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/12.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/13.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/14.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/15.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/16.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/17.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/18.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/19.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/20.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/21.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/22.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/23.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/24.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/25.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/26.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/27.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/28.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/29.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/30.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/31.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/32.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/33.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/34.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/35.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/36.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/37.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/38.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/39.gif" width="16" height="16" alt="" /></a>
+            <a href="#"><img src="/images/avatars/40.gif" width="16" height="16" alt="" /></a>
+          </p>
+        </div>
+        <%- else -%>
+        <h3>Login</h3>
+        <div class="box">
+          <% form_tag :controller => 'members', :action => 'login' do %>
+            <p>
+              <%= label_tag "member", "username" %> <%= text_field "member", "username" %>
+              <%= label_tag "member", "password" %> <strong><a href="#">?</a></strong> <%= password_field "member", "password" %>
+              <%= submit_tag "Login" %>
+            </p>
+          <% end %>
+        </div>
+        <%- end -%>
+        
+        <h3>Categories</h3>
+        <h4>General Categories</h4>
+        <ul>
+          <li><a href="/numenor/category/4">Apparel</a></li>
+          <li><a href="/numenor/category/1">Design</a></li>
+          <li><a href="/numenor/category/2">Programming</a></li>
+        </ul>
 
-  			<div id="menu">
-  				<p><a href="#">My Account</a> <a href="#">Settings</a> <%= link_to "Logout", :controller => 'members', :action => 'logout' %></p>
-  			</div>
-  		  <%- else -%>
-  			<div id="menu">
-  				<p><%= link_to "About", :controller => 'numenor', :action => 'about' %> <%= link_to "Create An Account", :controller => 'members', :action => 'register' %></p>
-  			</div>
-  			<%- end -%>
-  		</div>
-  	</div>
-  	
-  	<div id="container">
-  		<div id="flag">
-  			<h1 id="logo"><%= link_to("THE URLD", {:controller => 'numenor'}, :title => '&lt;&lt; Go home') %></h1>
-  			<%= image_tag "interface/newaroundhere.gif", :size => '230x35', :alt => "New around here? Create an account!" unless session[:logged_in] == true %>
-  		</div>
-
-  		<div id="wrapper_main">
-  			<div id="left_side">
-  			  <%- if session[:logged_in] == true -%>
-  			  <h2>HI, <%= @master_member.username.upcase %></h2>
-  				<div class="post_box">
-  					<small>You &amp; Your Friends</small>
-  					<div id="friends">
-  						<a href=""><img src="/images/avatars/me.gif" /></a><a href=""><img src="/images/avatars/1.gif" /></a><a href=""><img src="/images/avatars/2.gif" /></a><a href=""><img src="/images/avatars/3.gif" /></a><a href=""><img src="/images/avatars/4.gif" /></a><a href=""><img src="/images/avatars/5.gif" /></a><a href=""><img src="/images/avatars/6.gif" /></a><a href=""><img src="/images/avatars/7.gif" /></a><a href=""><img src="/images/avatars/8.gif" /></a><a href=""><img src="/images/avatars/9.gif" /></a><a href=""><img src="/images/avatars/10.gif" /></a><a href=""><img src="/images/avatars/11.gif" /></a><a href=""><img src="/images/avatars/12.gif" /></a><a href=""><img src="/images/avatars/13.gif" /></a><a href=""><img src="/images/avatars/14.gif" /></a><a href=""><img src="/images/avatars/15.gif" /></a><a href=""><img src="/images/avatars/16.gif" /></a><a href=""><img src="/images/avatars/17.gif" /></a><a href=""><img src="/images/avatars/18.gif" /></a><a href=""><img src="/images/avatars/19.gif" /></a><a href=""><img src="/images/avatars/20.gif" /></a><a href=""><img src="/images/avatars/21.gif" /></a><a href=""><img src="/images/avatars/22.gif" /></a><a href=""><img src="/images/avatars/23.gif" /></a><a href=""><img src="/images/avatars/24.gif" /></a><a href=""><img src="/images/avatars/25.gif" /></a><a href=""><img src="/images/avatars/26.gif" /></a><a href=""><img src="/images/avatars/27.gif" /></a><a href=""><img src="/images/avatars/28.gif" /></a><a href=""><img src="/images/avatars/29.gif" /></a><a href=""><img src="/images/avatars/30.gif" /></a><a href=""><img src="/images/avatars/31.gif" /></a><a href=""><img src="/images/avatars/32.gif" /></a><a href=""><img src="/images/avatars/33.gif" /></a><a href=""><img src="/images/avatars/34.gif" /></a><a href=""><img src="/images/avatars/35.gif" /></a><a href=""><img src="/images/avatars/36.gif" /></a><a href=""><img src="/images/avatars/37.gif" /></a><a href=""><img src="/images/avatars/38.gif" /></a><a href=""><img src="/images/avatars/39.gif" /></a><a href=""><img src="/images/avatars/40.gif" /></a>
-  					</div>
-  				</div>
-  			  <%- else -%>
-  				<h2>LOGIN</h2>
-  				<div class="post_box">
-  					<% form_tag :controller => 'members', :action => 'login' do %>
-  					  <label for="member_username">Username</label>
-  					  <%= text_field "member", "username" %>
-  					  <label for="member_password">Password</label> <strong><a href="#">?</a></strong>
-  					  <%= password_field "member", "password" %>
-  					  <%= submit_tag "Login" %>&nbsp;
-  					  <label for="remember_me">Remember Me</label>
-  					  <%= check_box_tag "remember_me", :checked => 'checked' %>&nbsp;
-  					<% end %>
-  				</div>
-  				<%- end -%>
-
-  				<h2>CATEGORIES</h2>
-  				<h4>General Categories</h4>
-  				<ul>
-  					<%- @categories.each do |c| -%>
-  					<li><%= link_to c.name, :controller => 'numenor', :action => 'category', :id => c.id %></li>
-  					<%- end -%>
-  				</ul>
-
-  				<h4>Subcategories</h4>
-  				<ul>
-  					<%- @subcategories.each do |c| -%>
-  					<li><%= link_to c.name, :controller => 'numenor', :action => 'category', :id => c.id %></li>
-  					<%- end -%>
-  				</ul>
-
-  			</div>
-
-  			<div id="right_side">
-  			  <%- if flash[:notice] or flash[:error] -%>
-          <div id="flash">
-            <a class="red" onclick="Element.hide('flash');"><%= flash[:notice] || flash[:error] %></a>
-          </div>
-          <%- end -%>
-  			  
-  			  <%= @content_for_layout %>
-  			</div>
-  			<br class="clear" />
-  		</div>
-  	</div>
+        <h4>Subcategories</h4>
+        <ul>
+          <li><a href="/numenor/category/3">Apple</a></li>
+        </ul>
+      </div>
     
-  </body>
+      <div id="content">
+        <%- if flash[:notice] or flash[:error] -%>
+        <div id="flash">
+          <a class="red" onclick="Element.hide('flash');"><%= flash[:notice] || flash[:error] %></a>
+        </div>
+        <%- end -%>
+        <%= @content_for_layout %>
+      </div>
+      
+      <br class="clear" />
+    </div>
+  </div>
+
+</body>
 </html>
