--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,393 +1,304 @@
+/* generic elements */
+
 @import "reset.css";
 
 body {
-	text-align: center;
-	background: #fff;
-	color: #333;
-	font: normal 12px Helvetica, Arial, Verdana, sans-serif;
-}
-
-img { border: 0; }
-
-div#post {
-	display: block;
-	position: relative;
-	text-align: center;
-	padding: 0.6em;
-	background: #333;
-	min-height: 19px;
-}
-div#post_inner {
-	position: relative;
-	width: 900px;
-	margin: 0 auto;
-	text-align: left;
-}
-div#post_inner form {
-	display: inline;
-}
-div#menu {
-	font: normal 11px Helvetica, Arial, Verdana, sans-serif;
-	position: absolute;
-	top: 2px;
-	right: 0;
-	text-align: right;
-}
-
-div#container {
-	display: block;
-	width: 900px;
-	margin: 0 auto;
-}
-
-div#flag {
-	display: block;
-	position: relative;
-	text-align: left;
-	height: 78px;
-}
-div#flag img {
-	float: right;
-	margin-top: 21px;
-}
-#flag h1 {
-	font: bold 130% Helvetica, Arial, sans-serif;
-}
-div#subnav {
-	text-align: center;
-	border-top: 1px solid #999;
-	padding: 10px 0;
-}
-div#flash {
-	text-align: center;
-	border-top: 1px solid #999;
-	padding: 10px 0;
-}
-
-div.post_box {
-	display: block;
-	margin: 25px 0;
-	padding: 15px;
-	border-top: 4px solid #ccc;
-	background: #ebebeb;
-	text-align: center;
-}
-	#left_side .post_box {
-		text-align: left;
-		margin-top: 0;
-	}
-
-div#wrapper_main {
-	width: 900px;
-	margin-bottom: 30px;
-}
-
-div#right_side, div#left_side {
-	display: block;
-	float: left;
-	text-align: left;
-	width: 190px;
-}
-
-	div#right_side {
-		width: 710px;
-	}
-	
-	div#left_side {
-		clear: right;
-	}
-
-div#right_side h2, div#tabs, div.cell {
-	padding-left: 20px;
-}
-
-div#friends a img {
-	border: none;
-	background: #fff;
-	padding: 3px;
-	margin: 2px;
-}
-
-table, tr {
-	width: 100%;
-	border: 0;
-	border-collapse: collapse;
-}
-
-table {
-	margin: 0 0 20px 0;
-}
-
-td {
-	width: 50%;
-	text-align: left;
-}
-
-
-hr {
-	border: 0;
-	line-height: 0;
-	height: 1px;
-	background: #999;
-	padding: 0;
-	margin-top: 0px !important; margin-top: -7px;
-}
-
-.clear {
-	border: 0px;
-	height: 0px;
-	clear: both;
-	width: 0px;
-}
-
-small, h5 {
-	font: normal 11px Helvetica, Arial, Verdana, sans-serif;
-	color: #999;
-}
-
-h5 {
-	margin-bottom: 5px;
+  font-family: Helvetica, Arial, Verdana, sans-serif;
+  font-size: 12px;
+  color: #333;
+	background-color: #fff;
 }
 
 a {
+  color: #06c;
 	text-decoration: underline;
-	color: #06c;
 }
-a:visited {
-	
-}
+
 a:hover {
+  color: #333;
 	text-decoration: none;
-	color: #333;
 }
 
-	#menu a, #menu a:visited {
-		color: #999;
-		text-decoration: underline;
-		padding-left: 5px;
-	}
-	#menu a:hover {
-		color: #ddd;
-		text-decoration: none;
-	}
-
-	a.red, a.red:visited {
-		color: #c00;
-		font: bold 100% Helvetica, Arial, sans-serif;
-		background: #ff9;
-		padding: 2px 4px;
-		margin: 0;
-	}
-
-	a.toggle, a.toggle:visited {
-		float: right;
-		color: #333;
-		padding: 2px 4px;
-		margin: 0 0 0 10px;
-		background: #ff9;
-		text-decoration: none;
-	}
-	a.toggle:hover {
-		color: #fff;
-		background: #333; 
-	}
-
-	a.options, a.options:visited, a.options_on, a.options_on:visited {
-		color: #999;
-		margin: 0 5px 0 0;
-		padding: 6px;
-		text-decoration: none;
-		background: #ebebeb;
-	}
-	a.options:hover, a.options_on, a.options_on:visited {
-		color: #333;
-		background: #d6d6d6;
-		-webkit-border-top-left-radius: 2px;
-		-webkit-border-top-right-radius: 2px;
-		-moz-border-radius-topright: 2px;
-		-moz-border-radius-topleft: 2px;
-		text-decoration: none;
-	}
-
-	a.options_on, a.options_on:visited, a.options_on:hover {
-		cursor: default;
-		font-weight: bold;
-	}
-	
-div.desc {
-	margin: 6px 0 0 0;
-	line-height: 140%;
-}
-div.desc a {
-	color: #69c;
-}
-div.desc .text {
-	color: #333;
-}
-		
-div#tabs {
-	font-size: 12px;
-	margin: 4px 0;
-	line-height: 150%;
-}
-
-.post_box p {
-	margin: 0 0 10px 0;
-	line-height: 150%;
-	color: #333;
-	font-family: Georgia, Garamond, Times, serif;
-}
-
-h1{
-	font: normal 25px Georgia, Garamond, Times, serif;
-	color: #333;
-	padding-top: 28px;
-}
-	h1#logo {
-		position: absolute;
-		top: 30px;
-		left: 0px;
-		display: block;
-		width: 126px;
-		height: 28px;
-		background: url("/images/interface/logo_urld.gif") no-repeat;
-		text-indent: -7777px;
-	}
-	h1#logo a, h1#logo a:visited {
-		position: absolute;
-		top: 0;
-		left: 0;
-		display: block;
-		width: 126px;
-		height: 28px;
-	}
-	
-h2 {
-	font: bold 11px Helvetica, Arial, Verdana, sans-serif;
-	color: #333;
-	/* text-decoration: underline; */
-	padding: 10px 0;
-	border-top: 4px #333 solid;
-}
-
-h3 {
-	display: inline;
-	font-size: 11px;
-	margin: 0 15px 0 0;
-}
-
-	h3 a, h3 a:visited {
-		color: #333;
-		padding: 4px 7px;
-		background: #fff;
-		text-decoration: none;
-		-webkit-border-radius: 4px; 
-		-moz-border-radius: 4px;
-	}
-	h3 a:hover {
-		color: #06c;
-		background: #fff;
-	}
-
-h4 {
-	font-size: 11px;
-	font-weight: normal;
-	color: #999;
-	padding: 7px 0 10px 0;
-	border-top: 4px #d6d6d6 solid;
-}
-
+p,
 ul {
-	list-style-type: none;
-	margin: 0 0 30px 0;
+  margin-bottom: 10px;
 }
 
-li {
-	list-style-type: none;
-	color: #666;
-	font: normal 12px Helvetica, Arial, Verdana, sans-serif;
-	padding: .5em 0;
-}
-  li.row1 {
-    background-color: #fff;
-  }
-  li.row2 {
-    background-color: #f5f7fB;
-  }
-	li a {
-		color: #06c;
-		text-decoration: underline;
-	}
-	ul.feed li a:visited {
-		color: #69c;
-		text-decoration: underline;
-	}
-	li a:hover {
-		text-decoration: none;
-		color: #333;
-	}
-
-	li a strong, li a:visited strong {
-		font-family: Helvetica, Arial, Verdana, sans-serif;
-		margin-right: 3px;
-	}
-	li a.expand, li a.expand:visited {
-		float: right;
-		-webkit-border-radius: 4px; 
-		-moz-border-radius: 4px;
-		font-family: Helvetica, Arial, Verdana, sans-serif;
-		font-weight: bold;
-		color: #333;
-		padding: 0 4px 1px 4px;
-		margin-top: -2px;
-		background: #ff9;
-		text-decoration: none;
-	}
-	li a.expand:hover {
-		color: #fff;
-		background: #333;
-	}
-	
-.post_box input, .post_box select {
-	margin: 2px 0 5px 0;
+br.clear {
+  clear: both;
 }
 
-input.cats_dogs, select#beds {
-	margin-left: 10px;
+.small {
+  font-size: 11px;
 }
 
-input.min_max {
-	width: 50px;
+.fade {
+  color: #999;
 }
 
-input:focus {
-	/* background: #fff; */
+.hide {
+  display: none;
 }
 
-#left_side .post_box select {
-	display: block;
-	width: 100%;
-	margin: 0 0 5px 0;
-}
-form {
-	color: #333;
-	font: normal 11px Helvetica, Arial, Verdana, sans-serif;
+.fake_link {
+  cursor: pointer;
 }
 
-#tooltip_div {
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: 1000;
-	display: none;
-	padding: 15px;
-	border: 5px solid #fff;
-	background: #eee;
-	color: #333;
-	font-size: 11px;
-	line-height: 16px;
-	width: 300px;
+.fake_link:hover {
+  text-decoration: underline;
 }
-	#tooltip_div img {
-		margin-bottom: 5px;
-	}
+
+/* quick bar */
+
+div#quick_bar_container {
+  padding: 5px 0;
+  color: #999;
+  background-color: #333;
+}
+
+div#quick_bar_container div#quick_bar {
+  width: 900px;
+  height: 23px;
+  margin: 0 auto;
+  font-size: 11px;
+  line-height: 11px;
+}
+
+div#quick_bar_container div#quick_bar a {
+  color: #999;
+}
+
+div#quick_bar_container div#quick_bar a:hover {
+  color: #ddd;
+}
+
+div#quick_bar_container div#quick_bar p {
+  float: left;
+  margin: 0 15px 0 0;
+}
+
+div#quick_bar_container div#quick_bar p.post_url {
+  height: 21px;
+  margin: 1px 15px 1px 0;
+  text-transform: lowercase;
+  background-color: #fff;
+  background-image: url('/images/interface/quick_bar_post_url_left.gif');
+  background-position: left center;
+  background-repeat: no-repeat;
+}
+
+div#quick_bar_container div#quick_bar p.post_url a {
+  display: block;
+  padding: 5px;
+  color: #333;
+  font-weight: bold;
+  text-decoration: none;
+  background-image: url('/images/interface/quick_bar_post_url_right.gif');
+  background-position: right center;
+  background-repeat: no-repeat;
+}
+
+div#quick_bar_container div#quick_bar form label {
+  margin-right: 5px;
+  text-transform: lowercase;
+}
+
+div#quick_bar_container div#quick_bar form input {
+  width: 150px;
+  margin-right: 5px;
+}
+
+div#quick_bar_container div#quick_bar form select,
+div#quick_bar_container div#quick_bar form input.submit {
+  width: auto;
+  margin-right: 5px;
+}
+
+div#quick_bar_container div#quick_bar ul#quick_navigation {
+  float: right;
+  padding: 5px 0;
+}
+
+div#quick_bar_container div#quick_bar ul#quick_navigation li {
+  float: left;
+  margin-left: 10px;
+}
+
+/* container */
+
+div#container {
+  width: 900px;
+  margin: 0 auto;
+}
+
+div#container h1 {
+  width: 100%;
+}
+
+div#container h1 a {
+  display: block;
+  width: 100%;
+  height: 28px;
+  padding: 30px 0;
+  background-image: url('/images/interface/logo.gif');
+  background-position: left center;
+  background-repeat: no-repeat;
+}
+
+/* sidebar */
+
+div#sidebar {
+  float: left;
+  width: 190px;
+}
+
+div#sidebar h3 {
+  margin-bottom: 10px;
+  padding-top: 10px;
+  font-size: 11px;
+  color: #333;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-top: 4px solid #333;
+}
+
+div#sidebar h4 {
+  margin-bottom: 10px;
+  padding-top: 7px;
+  font-size: 11px;
+  color: #999;
+  font-weight: normal;
+  border-top: 4px solid #d6d6d6;
+}
+
+div#sidebar h5 {
+  margin-bottom: 2px;
+  font-size: 11px;
+  color: #999;
+  font-weight: normal;
+}
+
+div#sidebar div.box {
+  margin-bottom: 20px;
+  padding: 15px;
+  border-top: 4px solid #ccc;
+  background-color: #ebebeb;
+}
+
+div#sidebar div#friends p.icons {
+  font-size: 0px;
+}
+
+div#sidebar div#friends p.icons img {
+  margin: 2px;
+  border: 3px solid #fff;
+  background-color: #fff;
+}
+
+div#sidebar ul {
+  margin-bottom: 10px;
+}
+
+div#sidebar ul li {
+  padding-bottom: 10px;
+}
+
+/* content */
+
+div#content {
+  float: right;
+  width: 710px;
+}
+
+div#content h2 {
+  margin-bottom: 10px;
+  padding: 10px 0 0 20px;
+  font-size: 11px;
+  color: #333;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-top: 4px solid #333;
+}
+
+div#content div.box {
+  padding-left: 20px;
+}
+
+div#content ul.tabs {
+  height: 24px;
+  border-bottom: 4px solid #d6d6d6;
+}
+
+div#content ul.tabs li {
+  float: left;
+  margin-right: 10px;
+  line-height: 12px;
+  background-color: #d6d6d6;
+  background-image: url('/images/interface/tab_left.gif');
+  background-position: top left;
+  background-repeat: no-repeat;
+}
+
+div#content ul.tabs li strong {
+  display: block;
+  padding: 8px 8px 4px 8px;
+  background-image: url('/images/interface/tab_right.gif');
+  background-position: top right;
+  background-repeat: no-repeat;
+}
+
+div#content p.page_info {
+  float: left;
+}
+
+div#content p.toggle_descs {
+  float: right;
+}
+
+div#content ul.feed {
+  margin-bottom: 20px;
+}
+
+div#content ul.feed li {
+  padding: 7px 0;
+}
+
+div#content ul.feed li a:visited {
+  color: #69c;
+}
+
+div#content ul.feed li a.expand {
+  float: right;
+  margin-top: -1px;
+}
+
+div#content ul.feed li p.desc {
+  margin: 7px 0 0 0;
+  color: #666;
+}
+
+div#content ul.feed li p.desc span.text {
+  color: #333;
+}
+
+div#content ul.feed li.row1 {
+  background-color: #fff;
+}
+
+div#content ul.feed li.row2 {
+  background-color: #f5f7fB;
+}
+
+div#content p.pagination {
+  padding: 20px 0 10px 0;
+  font-size: 11px;
+  border-top: 4px solid #d6d6d6;
+}
+
+div#content p.pagination a,
+div#content p.pagination span.ellipse {
+  padding-right: 10px;
+  color: #333;
+  font-weight: bold;
+  text-decoration: none;
+}
