--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,4 +1,5 @@
 /* v1.0 | 20080212 */
+/* http://meyerweb.com/eric/tools/css/reset/ */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -31,9 +32,6 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
-img {
-  vertical-align: bottom;
-}
 
 /* remember to define focus styles! */
 :focus {
@@ -52,4 +50,9 @@ del {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+/* custom additions */
+img {
+  vertical-align: bottom;
 }
