--- a/app/views/members/login.rhtml
+++ b/app/views/members/login.rhtml
@@ -1,5 +1,5 @@
-<% form_tag do %>
-  <label for="member_username">Username</label> <%= text_field "member", "username" %><br/>
-  <label for="member_password">Password</label> <%= password_field "member", "password" %><br/>
-  <%= submit_tag "Login" %>
-<% end %>
+<h2>Login</h2>
+<div class="box">
+  <p class="fade small"><em>Temporary page</em></p>
+  <p><strong>&larr;</strong> Please use the box to the left.</p>
+</div>
